--- a/leapcell.yaml
+++ b/leapcell.yaml
@@ -1,28 +1,5 @@
 runtime: javascript
 startCommand: node index.js
-buildCommand: |
-  apt-get update && apt-get install -y \
-    libglib2.0-0 \
-    libnss3 \
-    libatk1.0-0 \
-    libatk-bridge2.0-0 \
-    libcups2 \
-    libdrm2 \
-    libxkbcommon0 \
-    libxcomposite1 \
-    libxdamage1 \
-    libxrandr2 \
-    libgbm1 \
-    libasound2 \
-    libpangocairo-1.0-0 \
-  && npm install puppeteer@23.11.1 \
-  && npm install
+buildCommand: npm install puppeteer && npm install
 port: 8080
 memory: 1024mb
-systemPackages:
-  - chromium
-  - libglib2.0-0
-  - libnss3
-  - libatk1.0-0
-  - libatk-bridge2.0-0
-  - libcups2
